<resources>
    <string name="app_name">Anahuac</string>
    <string name="about_anahuac">LA UNIVERSIDAD ANÁHUAC ACTUALMENTE ESTÁ POSICIONADA DENTRO DEL 2 % DE MEJORES UNIVERSIDADES DEL MUNDO
Y EN EL TOP 3 DE UNIVERSIDADES PRIVADAS DE MÉXICO</string>
    <string name="conocenos">Conócenos</string>
    <string name="licenciaturas">Licenciaturas</string>
    <string name="about_licenciaturas">Contamos con más de 60 licenciaturas, distribuidos los diferentes campus que tenemos para ti.</string>
    <string name="diseno_multimedia">Diseño Multimedia</string>
    <string name="perfil">Perfíl</string>
    <string name="activities">Actividades</string>
    <string name="studyplan">Plan de Estudios</string>
    <string name="title_activities">Actividades de un Diseñador Multimedia</string>
    <string name="title_studyplan">Plan de Estudios de \nDiseño Multimedia</string>
    <string name="perfil_de_disenador">Perfil de un Diseñador Multimedia</string>
    <string name="descripcion_perfil">Al ser un diseñador multimedia, estarás rodeado de diferentes y nuevas tecnologías emergentes sobre todo digitales, en dónde puedas ejercer y culminar tu creatividad para diseñar diferentes necesidades digitales. Si eres alguien al quién le apasiona la tecnología, junto con el diseño, esto es para ti.</string>
    <string name="descripcion_activities">Manejarás herramientas de diseño cómo software de diseño vectorial, software para realizar animaciones tanto 2D cómo 3D, herramientas para producir contenido audiovisual y software compilador para realizar programación de cáracter front-end.</string>
    <string name="descripcion_activities_modas">Podrás trabajar o colaborar como ilustrador con marcas de ropa. Serás capaz de conceptualizar, ilustrar, producir y crear colecciones de ropa o accesorios para empresas de moda, ya sea la propia o de otra marca. Serás capaz de elaborar estrategias de promoción y distribución de tu propia empresa o trabajar como asesor de otras marcas.</string>
    <string name="contact_guide">Contacta a un asesor</string>
    <string name="descripcion_activities_grafico">Serás capaz, a partir de principios éticos, de generar conceptos, producir y coordinar proyectos de identidad gráfica y de información para el medio editorial, medios digitales e interactivos, campañas de publicidad, medios promocionales, envases y empaques, entre otros.</string>
    <string name="descripcion_activities_industrial">Serás capaz de entender las necesidades de las personas en un contexto específico, detectar oportunidades y generar ideas de productos o servicios que brinden soluciones innovadoras a problemas relacionados con la educación, el medio ambiente, la industria, la movilidad y el transporte, la salud, la vivienda entre muchos otros.</string>
    <string name="descripcion_activities_multimedia">pruebeeeeeeeeeeeaaaaaaaaaa</string>
    <string name="descripcion_activities_arquitectura">Obras y proyectos en los que aportarás las mejores soluciones arquitectónicas para los grandes retos del espacio habitable de la sociedad.</string>
    <string name="descripcion_activities_biotecnologia">Investigarás y analizarás sistemas biológicos utilizados en medios industriales, laboratorios, instituciones salud y comunidades. Diseñarás y validarás procesos que generen nuevos productos y servicios útiles en el bienestar humano. Trabajarás activamente con otros profesionales para optimizar el esfuerzo conjunto que resolverá problemas de salud y de generación de nuevos productos.</string>
    <string name="descripcion_activities_derecho">Serás capaz de interpretar la norma jurídica para su aplicación práctica con sentido ético. Podrás litigar en los tribunales federales y locales las diferentes ramas del Derecho. Evaluarás críticamente los actos de las autoridades para determinar su validez jurídica. Propondrás mecanismos que garanticen la seguridad jurídica y la aplicación efectiva de las normas.</string>
    <string name="descripcion_activities_relinter">Investigarás y analizarás fenómenos, situaciones y escenarios relacionados con temas internacionales para entender, interpretar y explicar las problemáticas actuales, con objeto de proponer soluciones integrales destinadas a los sectores público, privado y social.</string>
    <string name="descripcion_activities_fisio"> Tendrás la capacidad de analizar la funcionalidad del ser humano, desde el punto de vista neurológico y músculo esquelético, con el objetivo de dar a cada paciente una vida digna y autosuficiente. La práctica profesional es totalmente clínica, es decir, en contacto con pacientes; esto desarrolla un nivel clínico elevado que te convertirá en un profesionista altamente especializado.</string>
    <string name="descripcion_activities_engman">Establecerás líneas estratégicas factibles desde el punto de vista operacional, y rentables desde el punto de vista financiero para el desarrollo de nuevos productos, minimizando el riesgo que esto conlleva en un entorno altamente competitivo.</string>
    <string name="descripcion_activities_ingamb">Comprenderás y analizarás problemas de ingeniería a través de conceptos matemáticos, físicos, químicos y biológicos. Identificarás y analizarás los fenómenos de contaminación de agua, aire y suelo. Diagnosticarás las relaciones causa-efecto para prevenir y mitigar las repercusiones de la actividad humana.</string>
    <string name="descripcion_activities_ingciv">Comprenderás y analizarás problemas de ingeniería a través de conceptos matemáticos, físicos y químicos. Analizarás procesos constructivos para cuantificar y evaluar costos. Analizarás y evaluarás fenómenos hidráulicos en canales y tuberías. Conocerás y aplicarás propiedades de los materiales para construcción. </string>
    <string name="descripcion_activities_musica">Ejecutarás un instrumento musical o cantarás con alta calidad artística para que puedas trabajar profesionalmente como solista o integrándote a agrupaciones musicales; interpretarás, con excelente técnica, piezas del repertorio contemporáneo, nacional e internacional.</string>
    <string name="descripcion_activities_comunicacion">Desempeñarás actividades estratégicas de gestión, relaciones públicas, mercadeo, publicidad, desarrollando competencias de comportamiento organizacional, liderazgo, operación y administración de proyectos y sistemas de información, innovación y desarrollo, administración.</string>
    <string name="descripcion_activities_entretenimiento">Estarás capacitado para dirigir y representar a los artistas y deportistas; producir, dirigir y comercializar videojuegos, música, ediciones que resulten un éxito comercial; y realizar eventos masivos, escénicos y musicales. Producirás, desarrollarás, aplicarás y evaluarás conocimientos científicos y prácticos, de manera novedosa y original, en el mundo del entretenimiento, con aplicaciones a la vida profesional.</string>
    <string name="descripcion_activities_direcdep">Administrar funciones relacionadas con la dirección del negocio, actividades físicas, recreativas y deportivas, organización de personal y objetivos financieros. Planificar, organizar, desarrollar y controlar eventos deportivos regionales, nacionales o internacionales como ligas, campamentos, torneos y conferencias.</string>
    <string name="descripcion_activities_direccionrest">Analizar las tendencias y necesidades del comensal para crear conceptos restauranteros idóneos e innovadores apegados al signo de los tiempos. Asesor y capacitar en áreas de seguridad e higiene de alimentos, propuesta de menús, ambientación, protocolo y servicio, destilados, vinos y materia prima.</string>
    <string name="descripcion_activities_gastronomia">Dirigirás la selección y adquisición de materias primas (vegetales, frutas, productos animales, bebidas alcohólicas y no alcohólicas) considerando sus características, aplicaciones y variedades existentes en el mercado nacional e internacional para optimizar los recursos de las empresas.</string>
    <string name="descripcion_activities_admgob">Comprender las necesidades sociales y manejar las modalidades de la planeación administrativa, dirigiendo los procesos de ejecución o la toma de decisiones, previa valoración de las diferentes implicaciones políticas inherentes a las formas de organización, comunicación y práctica administrativa, incorporándolas con sentido ético y humano en beneficio de la sociedad.</string>
    <string name="descripcion_activities_direchot">Crearás y emprenderás nuevas experiencias de hospitalidad de alta calidad en la industria a través de técnicas innovadoras de servicio y hospitalidad. Innovarás estrategias y desarrollarás campañas mercadológicas de productos y servicios hoteleros a nivel nacional e internacional.</string>
    <string name="descripcion_activities_leng">El Plan de Estudios de la Licenciatura en Lenguas Modernas y Gestión Cultural en la Universidad Anáhuac combina el aprendizaje profesional de las Lenguas Modernas con las herramientas teóricas y prácticas de la Gestión Cultural enfocadas al desarrollo de emprendimientos culturales de impacto social.</string>
    <string name="descripcion_activities_med">Incidirás y transformarás el campo de la medicina, con profunda formación humana y bioética, además de un amplio respeto por la dignidad de la persona humana, para ofrecer una atención de calidad, caritativa y de calidez a los pacientes que tengas bajo tu cuidado.</string>
    <string name="list_studyplan"> Modelado 3D \n Animación 2D \n Animación 3D \n Diseño UX \n Diseño UI \n Diseño de Información \n Diseño de Videojuegos \n Programación Multimedia \n Programación Apps. Móviles \n Aspectos Legales del Diseño \n Diseño de Infografía \n Dibujo Geometríco \n Seminario de Investigación \n Temas Selectos de Multimedia \n Nuevas Tecnologías \n Producción Audiovisual \n Narrativa Audiovisual \n Fotografía Digital \n Efectos Especiales</string>
    <string name="version">VERSIÓN 1.0</string>
    <string name="creditos">CRÉDITOS</string>
    <string name="alumnos">NICOLE HENRICHSEN\nNICOLE PINEDA\nBRIAN USCANGA\nKEVIN ARJONA\nDIEGO A. MEDINA\nXIMENA HERNANDEZ\nBRENDA MEDINA</string>
    <string name="consultor">CONSULTOR</string>
    <string name="ing">ING. JOSÉ CARDENAS</string>
    <string name="info">PARA MAYOR INFORMACIÓN</string>
    <string name="paginaweb">CONSULTE LA PÁGINA\n OFICIAL DE LA \n UNIVERSIDAD.\n www.anahuac.mx</string>
    <string name="txt_titulo_latente">CONGRESO LATENTE 9A EDICIÓN</string>
    <string name="txt_latente_congreso">El Congreso Latente 9a Edición es un congreso internacional de diseño en dónde se fusionan todas las áreas de diseño para formar un universo colaborativo.</string>
    <string name="conferencistas">Conferencistas</string>
    <string name="talleres">TALLERES</string>
    <string name="txt_boleto">ADQUIERE TU BOLETO</string>
    <string name="btn_click_aqui">CLICK AQUÍ</string>
    <string name="mission_title">MISIÓN</string>
    <string name="mission_body">Contribuir a la formación integral de líderes de acción positiva y promover institucionalmente el desarrollo de la persona y de la sociedad, inspirados en los valores de humanismo cristiano.</string>
    <string name="vision_title">VISIÓN</string>
    <string name="vision_body">Ser la Universidad Internacional más reconocida de Cancún y del Caribe.
Estar entre las 3 principales Universidades Internacionales  de América Latina.
Estar entre las 10 Universidades Internacionales Católicas  más reconocidas del mundo.
Distinguirse por su excelencia académica acreditada y evaluada a nivel nacional e internacional.
Ser reconocida por su impacto en la formación integral de líderes de acción positiva.</string>
    <string name="finaltexto">DESARROLLADO POR LA LICENCIATURA DE DISEÑO MULTIMEDIA\nTODOS LOS DERECHOS RESERVADOS.ⓒ 2022.</string>
</resources>