<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_Profile"
        android:title="Perfil"
        android:icon="@drawable/ic_baseline_account_circle_24"
        app:showAsAction="ifRoom"
        android:iconTint="@color/white"
        android:tooltipText="@string/perfil"
        />

    <item
        android:id="@+id/item_Activities"
        android:title="Actividades"
        android:icon="@drawable/ic_baseline_assignment_24"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"
        android:tooltipText="@string/activities"/>

    <item
        android:id="@+id/item_StudyPlan"
        android:title="Plan de Estudios"
        android:icon="@drawable/ic_baseline_assessment_24"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"
        android:tooltipText="@string/studyplan"
        android:checked="true"/>


</menu>
