<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BachelorDetailActivity"
    android:id="@+id/layout_fragment_studyplan">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/h1_studyplan"
                android:textSize="@dimen/h1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_studyplan"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="@dimen/margin_default"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/color_primary"
                android:textStyle="bold"
                android:textAllCaps="true"/>

            <TextView
                android:id="@+id/p_studyplan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/h1_studyplan"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/list_studyplan"
                android:layout_margin="@dimen/margin_default"
                android:singleLine="false"
                android:lineSpacingExtra="@dimen/margin_short"/>

            <Button
                android:id="@+id/btn_contact_study"
                android:layout_margin="@dimen/margin_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/p_studyplan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_guide"
                android:backgroundTint="@color/color_primary"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>