<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.UsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

           <androidx.viewpager.widget.ViewPager
               android:id="@+id/view_pager_us"
               android:layout_width="match_parent"
               android:layout_height="@dimen/carousel_us_mission"
               app:layout_constraintTop_toTopOf="parent"/>

            <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
                android:id="@+id/worm_dots_indicator_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                app:dotsColor="@color/color_primary"
                app:dotsStrokeColor="@color/white"
                app:dotsCornerRadius="8dp"
                app:dotsSize="16dp"
                app:dotsSpacing="4dp"
                app:dotsStrokeWidth="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/view_pager_us"/>

            <TextView
                android:id="@+id/tv_mission_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mission_title"
                android:layout_margin="@dimen/margin_default"
                android:textColor="@color/black_60_57_57"
                android:textStyle="bold"
                android:textSize="@dimen/font_size_mission_title"
                app:layout_constraintTop_toBottomOf="@id/view_pager_us"/>

            <TextView
                android:id="@+id/tv_mission_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mission_body"
                android:textSize="@dimen/font_size_body"
                android:textColor="@color/black_60_57_57"
                android:layout_margin="@dimen/margin_default"
                app:layout_constraintTop_toBottomOf="@id/tv_mission_title"/>

            <TextView
                android:id="@+id/tv_vision_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vision_title"
                android:layout_margin="@dimen/margin_default"
                android:textColor="@color/black_60_57_57"
                android:textStyle="bold"
                android:textSize="@dimen/font_size_mission_title"
                app:layout_constraintTop_toBottomOf="@id/tv_mission_body"/>

            <TextView
                android:id="@+id/tv_vision_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vision_body"
                
                android:textSize="@dimen/font_size_body"
                android:textColor="@color/black_60_57_57"
                android:layout_margin="@dimen/margin_default"
                app:layout_constraintTop_toBottomOf="@id/tv_vision_title"/>



        </androidx.constraintlayout.widget.ConstraintLayout>










    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>